bugfix: fixed parent directory issue in sortTable